Typo "strait-forward" and more
"strait-forward" should be "straightforward"
there are a few more corrections that I managed to spot

--- a/book/intro.ipynb
+++ b/book/intro.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "2. Too math heavy. It takes you forever to understand.\n",
     "\n",
-    "3. Too confusing. The concepts are not strait-forward.\n",
+    "3. Too confusing. The concepts are not straightforward.\n",
     "\n",
     "This book aims to solve all of that. It tries to be as concise but easy to grasp as possible."
    ]
@@ -66,7 +66,7 @@
    "source": [
     "## Before we start\n",
     "\n",
-    "In this book, we're mainly focused on deep learning, which is a branch of machine learning that leverages of a lot of computing power and yield incredible result. Sometimes it's called artificial intelligence."
+    "In this book, we're mainly focused on deep learning, which is a branch of machine learning that leverages of a lot of computing power and yields incredible results. Sometimes it's called artificial intelligence."
    ]
   },
   {
@@ -84,7 +84,7 @@
    "source": [
     "## Why learn machine learning?\n",
     "\n",
-    "There are many reason to learn ML. The most obvious reason is that ML is quite powerful and useful, and many systems use it ranging from Google's search to snapchat filters. Secondly, it's quite the rage nowadays, so it certainly would help you land a prestigious job. Thirdly, in the case where robots take over the world (like Elon Musk feared), having learned machines' ways of dealing things may be your only path to survival! Jokes aside, learning ML does help to calm your nerves since most of the theories on the Internet about robots are just over the top. And learning ML helps keeping you from being tricked by those deceptive information."
+    "There are many reason to learn ML. The most obvious reason is that ML is quite powerful and useful, and many systems use it ranging from Google's search to snapchat filters. Secondly, it's quite the rage nowadays, so it certainly would help you land a prestigious job. Thirdly, in the case where robots take over the world (like Elon Musk feared), having learned machines' ways of dealing things may be your only path to survival! Jokes aside, learning ML does help to calm your nerves since most of the theories on the internet about robots are just over the top. And learning ML helps keeping you from being tricked by those deceptive information."
    ]
   }
  ],
